[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/NPCBoatGroup.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/PlayerBoatGroup.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/BoatDistanceCalculator.gd" type="Script" id=3]
[ext_resource path="res://sprites/sheepSpriteTransparent.png" type="Texture" id=4]
[ext_resource path="res://scenes/Map1.tscn" type="PackedScene" id=5]
[ext_resource path="res://ChaseOfTheSeaSheep.wav" type="AudioStream" id=6]
[ext_resource path="res://scripts/game.gd" type="Script" id=7]
[ext_resource path="res://COMIC.TTF" type="DynamicFontData" id=8]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="game" type="Node2D"]
script = ExtResource( 7 )

[node name="PlayerBoatGroup" parent="." instance=ExtResource( 2 )]

[node name="NPCBoatGroup" parent="." instance=ExtResource( 1 )]

[node name="Obstacles" type="Node" parent="."]

[node name="Obstacle" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 1068.14, 770.167 )
physics_material_override = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle"]
scale = Vector2( 0.292039, 0.263347 )
texture = ExtResource( 4 )

[node name="Obstacle2" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 1189.71, -53.4485 )
physics_material_override = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle2"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle2"]
scale = Vector2( 0.292039, 0.263347 )
texture = ExtResource( 4 )

[node name="Obstacle3" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 641.5, 311 )
physics_material_override = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle3"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle3"]
scale = Vector2( 0.292039, 0.263347 )
texture = ExtResource( 4 )

[node name="Obstacle4" type="StaticBody2D" parent="Obstacles"]
position = Vector2( 733.703, 58.6976 )
physics_material_override = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Obstacle4"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Obstacles/Obstacle4"]
scale = Vector2( 0.292039, 0.263347 )
texture = ExtResource( 4 )

[node name="fake_sprite" type="Sprite" parent="Obstacles/Obstacle4"]
position = Vector2( 0, 2400 )
scale = Vector2( 0.292039, 0.263347 )
texture = ExtResource( 4 )

[node name="Map1" parent="." instance=ExtResource( 5 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="GUI" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="GUI"]
margin_right = 171.0
margin_bottom = 40.0
color = Color( 0.14902, 0.129412, 0.478431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoatDistanceCalculator" type="Label" parent="GUI/ColorRect"]
margin_right = 100.0
margin_bottom = 29.0
theme = SubResource( 4 )
custom_colors/font_color = Color( 0.941176, 0.784314, 0.784314, 1 )
text = "Distance - "
align = 1
valign = 2
max_lines_visible = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 168.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
